# u3d

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
IDTF/: DefaultSettings.h  File.cpp  File.h  FileReferenceConverter.cpp  FileReferenceConverter.h  IConverter.h  LineSetConverter.cpp  LineSetConverter.h  MeshConverter.cpp  MeshConverter.h  MetaDataConverter.cpp  MetaDataConverter.h  ModelConverter.cpp  ModelConverter.h  ModifierConverter.cpp  ModifierConverter.h  NodeConverter.cpp  NodeConverter.h  PointSetConverter.cpp  PointSetConverter.h  ResourceConverter.cpp  ResourceConverter.h  TextureConverter.cpp  TextureConverter.h
IDTF/Common/: AnimationModifier.h  BoneWeightModifier.h  CLODModifier.h  Color.h  FileReference.cpp  FileReference.h  GlyphCommandList.cpp  GlyphCommandList.h  GlyphCommands.h  GlyphModifier.cpp  GlyphModifier.h  INode.h  IResource.h  Int2.h  Int3.h  LightNode.h  LightResource.h  LightResourceList.h  LineSetResource.h  MaterialResource.h  MaterialResourceList.h  MeshResource.h  MetaDataList.cpp  MetaDataList.h  ModelNode.h  ModelResource.cpp  ModelResource.h  ModelResourceList.cpp  ModelResourceList.h  ModelSkeleton.h  Modifier.h  ModifierList.cpp  ModifierList.h  MotionResource.h  MotionResourceList.h  Node.h  NodeList.cpp  NodeList.h  ParentData.h  ParentList.cpp  (+23 more)
IDTF/Helpers/: DebugInfo.cpp  Guids.cpp  MiscUtilities.cpp  ModifierUtilities.cpp  SceneUtilities.cpp  TGAImage.cpp
IDTF/Include/: ConverterOptions.h  ConverterResult.h  DebugInfo.h  SceneUtilities.h  TGAImage.h  U3DHeaders.h
RTL/Component/Base/: IFXCoincidentVertexMap.cpp  IFXCornerIter.cpp  IFXEuler.cpp  IFXFatCornerIter.cpp  IFXTransform.cpp  IFXVectorHasher.cpp  IFXVectorHasher.h  IFXVertexMap.cpp  IFXVertexMapGroup.cpp
RTL/Component/BitStream/: CIFXBitStreamX.cpp  CIFXBitStreamX.h  CIFXDataBlockQueueX.cpp  CIFXDataBlockQueueX.h  CIFXDataBlockX.cpp  CIFXDataBlockX.h  IFXHistogramDynamic.cpp
RTL/Component/Bones/: CIFXAnimationModifier.cpp  CIFXAnimationModifier.h  CIFXBoneWeightsModifier.cpp  CIFXBoneWeightsModifier.h  CIFXSkeleton.cpp  CIFXSkeleton.h  IFXBoneCache.h  IFXBoneCacheArray.cpp  IFXBoneCacheArray.h  IFXBoneContext.h  IFXBoneLinks.h  IFXBoneNode.cpp  IFXBoneNode.h  IFXBoneNodeList.h  IFXBonesManagerImpl.cpp  IFXBonesManagerImpl.h  IFXCharacter.cpp  IFXCharacter.h  IFXConstraints.h  IFXCoreNode.cpp  IFXCoreNode.h  IFXCylinder.h  IFXIKModes.h  IFXKeyFrameContext.h  IFXKeyTrack.cpp  IFXLong3.h  IFXMatrix3x4.h  IFXMeshGroup_Character.cpp  IFXMeshGroup_Character.h  IFXMeshGroup_Impl.h  IFXMeshInterface.h  IFXMeshVertexMap.h  IFXMixerQueue.cpp  IFXMixerQueueImpl.cpp  IFXMixerQueueImpl.h  IFXMotion.cpp  IFXMotionManagerImpl.cpp  IFXMotionManagerImpl.h  IFXMotionMixerImpl.cpp  IFXMotionMixerImpl.h  (+9 more)
RTL/Component/BoundHierarchy/: CIFXAABBHierarchyBuilder.cpp  CIFXAABBHierarchyBuilder.h  CIFXAxisAlignedBBox.cpp  CIFXAxisAlignedBBox.h  CIFXBTree.cpp  CIFXBTree.h  CIFXBTreeNode.cpp  CIFXBTreeNode.h  CIFXBoundFace.cpp  CIFXBoundFace.h  CIFXBoundHierarchy.cpp  CIFXBoundHierarchy.h  CIFXBoundUtil.cpp  CIFXBoundUtil.h  CIFXCollisionResult.cpp  CIFXCollisionResult.h  CIFXPickObject.cpp  CIFXPickObject.h  CIFXPrimitiveOverlap.cpp  CIFXPrimitiveOverlap.h  CIFXResultAllocator.cpp  CIFXResultAllocator.h
RTL/Component/CLODAuthor/: CIFXAuthorCLODGen.cpp  CIFXAuthorCLODGen.h  CIFXAuthorMeshMap.cpp  CIFXAuthorMeshMap.h  CIFXSetAdjacencyX.cpp  CIFXSetAdjacencyX.h  CIFXSetX.cpp  CIFXSetX.h  CLODGenerator.cpp  CLODGenerator.h  ContractionRecorder.cpp  ContractionRecorder.h  CostMap.h  Face.cpp  Face.h  FaceExam.h  FacePtrSet.h  FaceUpdate.h  GeometryObject.h  IFXSList.h  Matrix4x4.cpp  Matrix4x4.h  NormalMap.cpp  NormalMap.h  Pair.cpp  Pair.h  PairFinder.cpp  PairFinder.h  PairHash.cpp  PairHash.h  PairHeap.cpp  PairHeap.h  Primitives.cpp  Primitives.h  QEConstants.h  SmallPtrSet.h  Vertex.cpp  Vertex.h  VertexPairContractor.cpp  VertexPairContractor.h
RTL/Component/Common/: CIFXCoreServices.cpp  CIFXCoreServices.h  CIFXCoreServicesRef.cpp  CIFXCoreServicesRef.h  CIFXHashMap.cpp  CIFXHashMap.h  CIFXIDManager.cpp  CIFXIDManager.h  CIFXMetaData.cpp  CIFXMetaData.h  CIFXNameMap.cpp  CIFXNameMap.h  CIFXSimpleHash.cpp  CIFXSimpleHash.h  CIFXVoidWrapper.cpp  CIFXVoidWrapper.h  IFXComponentDescriptorList.cpp  IFXComponentFactories.h  IFXDids.cpp  IFXRenderWindow.cpp
RTL/Component/Exporting/: CIFXAnimationModifierEncoder.cpp  CIFXAnimationModifierEncoder.h  CIFXAuthorCLODEncoderX.cpp  CIFXAuthorCLODEncoderX.h  CIFXAuthorCLODEncoderX_P.cpp  CIFXAuthorCLODEncoderX_S.cpp  CIFXAuthorGeomCompiler.cpp  CIFXAuthorGeomCompiler.h  CIFXBlockPriorityQueueX.cpp  CIFXBlockPriorityQueueX.h  CIFXBlockWriterX.cpp  CIFXBlockWriterX.h  CIFXBoneWeightsModifierEncoder.cpp  CIFXBoneWeightsModifierEncoder.h  CIFXCLODModifierEncoder.cpp  CIFXCLODModifierEncoder.h  CIFXDummyModifierEncoder.cpp  CIFXDummyModifierEncoder.h  CIFXFileReferenceEncoder.cpp  CIFXFileReferenceEncoder.h  CIFXGlyphModifierEncoder.cpp  CIFXGlyphModifierEncoder.h  CIFXGroupNodeEncoder.cpp  CIFXGroupNodeEncoder.h  CIFXLightNodeEncoder.cpp  CIFXLightNodeEncoder.h  CIFXLightResourceEncoder.cpp  CIFXLightResourceEncoder.h  CIFXLineSetEncoder.cpp  CIFXLineSetEncoder.h  CIFXMaterialResourceEncoder.cpp  CIFXMaterialResourceEncoder.h  CIFXModelNodeEncoder.cpp  CIFXModelNodeEncoder.h  CIFXMotionResourceEncoder.cpp  CIFXMotionResourceEncoder.h  CIFXNodeBaseEncoder.cpp  CIFXNodeBaseEncoder.h  CIFXPointSetEncoder.cpp  CIFXPointSetEncoder.h  (+15 more)
RTL/Component/Importing/: CIFXAnimationModifierDecoder.cpp  CIFXAuthorCLODDecoder.cpp  CIFXAuthorCLODDecoder_P.cpp  CIFXAuthorCLODDecoder_S.cpp  CIFXBTTHash.cpp  CIFXBlockReaderX.cpp  CIFXBoneWeightsModifierDecoder.cpp  CIFXCLODModifierDecoder.cpp  CIFXDecoderChainX.cpp  CIFXDummyModifierDecoder.cpp  CIFXGlyphModifierDecoder.cpp  CIFXGroupDecoder.cpp  CIFXInternetReadBufferX.cpp  CIFXLightDecoder.cpp  CIFXLightResourceDecoder.cpp  CIFXLineSetDecoder.cpp  (+18 more)
RTL/IFXCorePluginStatic/: IFXCorePluginStatic.cpp
libIDTF/: IFXOSLoader.cpp  IFXOSUtilities.cpp  SceneConverterLib.cpp  SceneConverterLib.h  Writer.cpp  Writer.h
(+226 files in other folders)
